k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebitda
  labels:
    app.kubernetes.io/name: ebitda
    environment: production
    shared-gateway-access: "true"
