k8s/production/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ebitda
  namespace: ebitda
  labels:
    app.kubernetes.io/name: ebitda
    environment: production
spec:
  parentRefs:
    - name: production-shared-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - ebitda-prod.dev-agrinas.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ebitda
          port: 80
